Appendix/Networking/clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-clusterip-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-clusterip
  template:
    metadata:
      labels:
        app: nginx-clusterip
    spec:
      containers:
      - name: nginx
        image: nginx:1.27.0
        volumeMounts:
        - name: nginx-clusterip-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-clusterip-config
        configMap:
          name: nginx-clusterip-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
spec:
  selector:
    app: nginx-clusterip
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
