Appendix/Networking/loadbalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-loadbalancer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-loadbalancer
  template:
    metadata:
      labels:
        app: nginx-loadbalancer
    spec:
      containers:
      - name: nginx
        image: nginx:1.27.0
        volumeMounts:
        - name: nginx-loadbalancer-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-loadbalancer-config
        configMap:
          name: nginx-loadbalancer-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
spec:
  selector:
    app: nginx-loadbalancer
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
