Appendix/Networking/nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-nodeport-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-nodeport
  template:
    metadata:
      labels:
        app: nginx-nodeport
    spec:
      containers:
      - name: nginx
        image: nginx:1.27.0
        volumeMounts:
        - name: nginx-nodeport-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-nodeport-config
        configMap:
          name: nginx-nodeport-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  selector:
    app: nginx-nodeport
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30001
  type: NodePort
